[package]
name = "actix-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
rand = "0.8"
chrono = "0.4"
bytes = "1"
lazy_static = "1.4"

tokio = { version = "1", features = ["full"] }

actix-rt = "2"
