[package]
name = "actix-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]

# General
env_logger = "0.10"
log = "0.4"
rand = "0.8"

# Parser
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web Framework
actix = "0.13"
actix-broker = "0.4"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4"
