[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

# General
env_logger = "0.10"
log = "0.4"
rand = "0.8"
chrono = "0.4"
bytes = "1"
lazy_static = "1.4"

# Parser
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Frameworks
tokio = { version = "1", features = ["full"] }
# It may not be necessary: tokio-util = { version="0.7", features = ["codec"] }

# Web Server Frameworks
webrtc = "0.6"
actix-web = "4"

# Web Client Frameworks
awc = { version = "3", features = ["openssl"] }
actix-rt = "2"
openssl = "0.10" # WARN: requires manually install https://docs.rs/openssl/latest/openssl/

[[bin]]
name = "client"
path = "src/client.rs"
test = false
bench = false

[[bin]]
name = "actix-runtime"
path = "src/actix_runtime.rs"
test = false
bench = false

